minor bug fixes

--- a/privatebeta.activork.com/static/website/css/style.css
+++ b/privatebeta.activork.com/static/website/css/style.css
@@ -131,7 +131,7 @@ body {
 
 .vertical-cat > li > a {
   display: block;
-  width: 65%;
+  8width: 65%;
   color: #fff;
   padding: 4px;
   font-size: 12px;
