--- a/privatebeta.activork.com/static/website/css/style.css
+++ b/privatebeta.activork.com/static/website/css/style.css
@@ -131,7 +131,7 @@ body {
 
 .vertical-cat > li > a {
   display: block;
-  8width: 65%;
+  width: 65%;
   color: #fff;
   padding: 4px;
   font-size: 12px;
@@ -1720,7 +1720,7 @@ width: 100%;
 }
 
 .dropdown-menu{
-  border-radius: 10px;
+  border-radius: 20px;
 }
 
 .btn-default{
