--- a/privatebeta.activork.com/static/website/css/style.css
+++ b/privatebeta.activork.com/static/website/css/style.css
@@ -1727,6 +1727,11 @@ width: 100%;
 .btn-default{
   border-color : #f9a533;
   border-width: 2px;
+  color: #f9a533!important;
+}
+
+.btn-default *{
+  color: #f9a533!important;
 }
 
 .m-cards{
@@ -1776,4 +1781,9 @@ width: 100%;
 
  .vertical-cat > li > a>i{
   margin-right: 0.6em;
+}
+
+.source-section{
+  margin-top: 20px;
+  background-color: white;
 }
