--- a/privatebeta.activork.com/static/website/css/style.css
+++ b/privatebeta.activork.com/static/website/css/style.css
@@ -1787,3 +1787,8 @@ width: 100%;
   margin-top: 20px;
   background-color: white;
 }
+
+.vertical-cat>li>a>span{
+  position: absolute;
+  line-height: 24px;
+}
